--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web page generator software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web creator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Kzjs4jKZ4oySu1/3T7K3EHX9kxA09MmljhNXt9Wrty80th7pXjaBz2CmrHV/HofO02x+sDHkijBQmc0Jh2iF/HCogz1sTQvqm4orNZhXsLKlzySjhYZnZYwGy9p9EVAQ" data-form-email="true">
+                    <input type="hidden" value="T/yCIQJznSBZGFBZnEZsA2uNIV2vkWvgkUJ1oMUcY9IiK2qhpm8GRyQRFSLHQUlxyKgdfZchS/G10icubSwHM9eL+pZc43NdyK3TOJy7Sz9yRPmYo74Al2Ap17pwcLJ7" data-form-email="true">
 
                     
 
