--- a/Photoshop Certification.html
+++ b/Photoshop Certification.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple html web site development</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web site maker</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Nf3k7O5F8Y47a1ps98k4Lm6PlqBjmT/0QEODL1b/G+0yjfGDWNeNVbCzM8qDU6tDT7yOx8xk8zblt3GigwTvXzpRuoAWGt7Koj2ZVELUF/mzQOXoRRYkdwOeu52s6gxs" data-form-email="true">
+                    <input type="hidden" value="NfkiHIv7wVzU+YICDSfQ1SybpwYjRsT/zPrkDukDrXW8GkvfxwW/02WZolhXgNL4BbzOBiZEVhJKkNqJwkokv+5Nc4ViAkQjveIlDhJIn1ONG6NNXGX9WE0wF/v98OH5" data-form-email="true">
 
                     
 
