--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best html web site creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline site design software</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="cU20xFS0pKrarExB69FtGP+SR4sFe7B9tu9J2jNK0XsI60/Wtv2Ju/jkJSrTaMLCJKEoXgr74+L14rQ7oGjTSEUlnBDuNbio0RuZkI7J0YOpFXSqDHJv/K0NZ/eaN20X" data-form-email="true">
+                    <input type="hidden" value="tZ6NUxtB1NHmfLYwlziMYMa9ploeCZatRoynsQaMYIqAakFPB1a0BGMoNGQdXY9oTHsPvnkolA7C2Kpdq48fvFCPu0Z8SB9eCEQN+wL7IFwY5FRKMRaohKBk7+WhDysm" data-form-email="true">
 
                     
 
