--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap web page generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Zarn5oqwXTxPFgUAJL9UjymZglGR9dfilto46KGPg43rzgq7Sdw8uMdLzCOaUdD6C152xs1K/hf4PCTi5lAIF3fgj3O60vz/5Wq2a6vk3uKTqtsezZjBM/fzII6mQOqe" data-form-email="true">
+                    <input type="hidden" value="X5pR28YdD56qXQZq4hWo2YJ3Ual47phDJLw9/jpHKtwPh9N9J4MP7dbSTYgod7hI91z5mJ3cTpmt5qN+aoF0lUwlhmqwyjaUce0wygEdEcv82sWHvczwiqmrdyx2F9sh" data-form-email="true">
 
                     
 
