--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy html website design</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="X5pR28YdD56qXQZq4hWo2YJ3Ual47phDJLw9/jpHKtwPh9N9J4MP7dbSTYgod7hI91z5mJ3cTpmt5qN+aoF0lUwlhmqwyjaUce0wygEdEcv82sWHvczwiqmrdyx2F9sh" data-form-email="true">
+                    <input type="hidden" value="VcH+0Hg3S3CLKh8OUnzP3df+m5MJawBZWbvR0qKJTHEFXk0eqFsZXt6QKxkNefU0BWgMyIcmhG9/R6gx0kT2ClNym5cT0xRGFglW0d1RjruvrqPOoyLDREES/WKYrqGx" data-form-email="true">
 
                     
 
