--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top html site design</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/full-unsplash-photo-1454165205744-3b78555e5572-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -218,7 +218,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="Nbe7MOP5GoqPI2y3uRvZi8rlBWkhUjQI0I0GhteISm6cgN1YpFxrT0GgLQ4yM19WYzew4xe2RGDMIK8UL2AdnbsXnT5ubP2puJLWJzlvMBKJFr74hxIZpVsXZSkXUtlt" data-form-email="true">
+                        <input type="hidden" value="aAyy2FzvTg8MGToDmhw1GJINRVzFDnQ8u3hQAmYaeWz09Si4xe/7ZsbHIUya3FAMoNlg//RGMVJA7/bYIwy7pAZFJSKuxwHtg2F72kudpKkYCiT94rJsKDAjcXJ/SfUf" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-65-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -274,7 +274,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="rl7wQ9Zf4hpUsTwP2Zw4rgLO9xQJM4lg5tIpJJ2MA2txutIOODEiEMYR7u4R0d3TBfBdrVV3GOsWfjX0/jOrVAN9CtUikccEz+/JFZr3+f/TBPsX4OaCUB3XM6RS60is" data-form-email="true">
+                    <input type="hidden" value="VxuB4+fXQ5wrPRXG6WTwVxqCVG0sQMyt8OzYLZvLymof+yLcsHmSNU0pYoTPBQpvm2HAlyowXjgnrmpkEDeTvf3612Ux+95d451SVekkoLb9a7e3/qKDxNCzUG+4k/N/" data-form-email="true">
 
                     
 
